Refactor for execute_results in view if nil dont throw error

--- a/app/views/codechallenge/index.html.haml
+++ b/app/views/codechallenge/index.html.haml
@@ -5,8 +5,9 @@
 .codechallenge-form
   = form_for(@codechallenge, :url => codechallenge_path(@codechallenge), html: { role: 'form' }) do |f|
     =text_area_tag "codechallenge_attempt", @codechallenge.problem, :rows => 15, :style => "width: 100%"
-    .result
-      %pre=@execute_result.html_safe
+    - if @execute_result.present?
+      .result
+        %pre=@execute_result.html_safe
     %br
     .pull-right
       =f.submit "Submit", class: 'btn btn-primary btn-lg'
